test/log/mac/vwnmsub_vv_i16_m.txt
vwnmsub_vv_i16_m.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwnmsub_vv_i16_m.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwnmsub_vv_i16_m.c:14:40: warning: backslash and newline separated by space
   14 |  #define data_init(a, b, n, threshold) \
      |                                         
vwnmsub_vv_i16_m.c:15:35: warning: backslash and newline separated by space
   15 |      for(int i = 0; i < n; i++) { \
      |                                    
vwnmsub_vv_i16_m.c:16:40: warning: backslash and newline separated by space
   16 |              a[i] = random(threshold); \
      |                                         
vwnmsub_vv_i16_m.c:17:27: warning: backslash and newline separated by space
   17 |              b[i] = a[i]; \
      |                            
vwnmsub_vv_i16_m.c:23:6: warning: no previous prototype for 'vwnmsub_vv_i16_m_golden' [-Wmissing-prototypes]
   23 | void vwnmsub_vv_i16_m_golden(bool32_t mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~
vwnmsub_vv_i16_m.c: In function 'vwnmsub_vv_i16_m_golden':
vwnmsub_vv_i16_m.c:23:75: warning: unused parameter 'c' [-Wunused-parameter]
   23 | void vwnmsub_vv_i16_m_golden(bool32_t mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                                                                  ~~~~~~~~~^
vwnmsub_vv_i16_m.c: In function 'main':
vwnmsub_vv_i16_m.c:43:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   43 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vwnmsub_vv_i16_m.c:16:15: error: subscripted value is neither array nor pointer nor vector
   16 |              a[i] = random(threshold); \
      |               ^
vwnmsub_vv_i16_m.c:44:5: note: in expansion of macro 'data_init'
   44 |     data_init(a, exp_a, 16*2, 0xffffffff);
      |     ^~~~~~~~~
vwnmsub_vv_i16_m.c:17:22: error: subscripted value is neither array nor pointer nor vector
   17 |              b[i] = a[i]; \
      |                      ^
vwnmsub_vv_i16_m.c:44:5: note: in expansion of macro 'data_init'
   44 |     data_init(a, exp_a, 16*2, 0xffffffff);
      |     ^~~~~~~~~
vwnmsub_vv_i16_m.c:49:29: error: incompatible type for argument 1 of 'vwnmsub_vv_i16_m_golden'
   49 |     vwnmsub_vv_i16_m_golden(exp_mask,exp_a,exp_b,exp_c,exp_result);
      |                             ^~~~~~~~
      |                             |
      |                             uint64_t * {aka long long unsigned int *}
vwnmsub_vv_i16_m.c:23:39: note: expected 'bool32_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   23 | void vwnmsub_vv_i16_m_golden(bool32_t mask,int32_t *a,int16_t *b,int16_t *c,int32_t *exp_result) {
      |                              ~~~~~~~~~^~~~
vwnmsub_vv_i16_m.c:56:35: error: subscripted value is neither array nor pointer nor vector
   56 |         if(exp_result[i] != result[i]) {
      |                                   ^
vwnmsub_vv_i16_m.c:57:79: error: subscripted value is neither array nor pointer nor vector
   57 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vwnmsub_vv_i16_m.c:40:18: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   40 |     int32x16x2_t result = {0};
      |                  ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwnmsub_vv_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwnmsub_vv_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwnmsub_vv_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwnmsub_vv_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed